--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/views/_admin_pipelines_snippet.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/views/_admin_pipelines_snippet.scss
@@ -18,9 +18,8 @@
   margin-left: 210px;
 }
 
-#pipeline_snippet_view #view_group a.edit.link_as_button {
+#pipeline_snippet_view #view_group .form_buttons a.edit.link_as_button {
   float: right;
-  background-color: #39c;
 }
 
 #pipeline_snippet_edit #edit_group .form_buttons .submit {
