--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css/_ui.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css/_ui.scss
@@ -21,198 +21,6 @@
   padding: 0.5em;
 }
 
-.pipeline-history {
-  color: white;
-}
-
-.pipeline-history h1 {
-  padding: 0.5em;
-  font-weight: bold;
-  font-size: 1.2em;
-  color: #e8e8e8;
-  text-transform: uppercase;
-}
-
-.pipeline-instance a:link {
-  color: white;
-  text-decoration: none;
-}
-
-.pipeline-instance {
-  border: 1px solid #666;
-  background-color: #484537;
-  color: white;
-  zoom: 1;
-}
-
-/* pipeline instance */
-.pipeline-instance .summary,
-.pipeline-instance .trigger {
-  float: left;
-}
-
-.pipeline-instance .caused-by {
-  float: right;
-}
-
-.stage-instance .summary {
-  background-image: image_url("panel-header-background.png");
-  background-repeat: repeat;
-}
-
-.pipeline-instance .summary,
-.pipeline-instance .caused-by,
-.pipeline-instance dl {
-  margin: 1em;
-}
-
-.pipeline-instance .summary h1 {
-  font-size: 1.5em;
-  color: #c7caa8;
-}
-
-.pipeline-instance .summary .name {
-  font-weight: bold;
-  color: #c7caa8;
-}
-
-.pipeline-instance .summary ul {
-  margin: 0;
-  padding: 0;
-}
-
-.pipeline-instance .summary li {
-  padding-right: 0.5em;
-  padding-left: 0;
-  display: inline;
-}
-
-.pipeline-instance dl {
-  float: left;
-}
-
-.pipeline-instance dt {
-  color: #c7caa8;
-  text-transform: uppercase;
-}
-
-.pipeline-instance .caused-by h2 {
-  float: left;
-  text-transform: uppercase;
-  color: #c7caa8;
-}
-
-.pipeline-instance .caused-by dl {
-  margin: 0 0.5em;
-}
-
-.pipeline-instance .caused-by dd {
-  display: block;
-  width: 40px;
-  height: 40px;
-  background-color: gray;
-  text-indent: -10000px;
-  zoom: 1;
-  overflow: hidden;
-  border: 1px solid white;
-}
-
-.pipeline-instance .caused-by dt {
-  text-transform: none;
-  font-size: 0.8em;
-}
-
-/* stage instance */
-.stage-instance h3 {
-  font-size: 1.2em;
-  font-weight: bold;
-  padding: 0.5em 1em;
-  float: left;
-  color: #c7caa8;
-}
-
-.stage-instance h3 span {
-  color: white;
-  margin: 1em;
-}
-
-.stage-instance .name {
-  color: white;
-}
-
-.stage-instance .status {
-  background-image: image_url("icon-stage-status.png");
-  background-repeat: no-repeat;
-  background-color: transparent !important;
-  line-height: 25px;
-  padding: 0;
-  padding-right: 28px;
-  background-position: right 0;
-}
-
-.stage-instance .status.Failed,
-.stage-instance .status.Cancelled {
-  background-position: right -40px;
-}
-
-.stage-instance dl {
-  float: left;
-  margin: 0.5em 1em 1em 1em;
-}
-
-.stage-instance dd {
-  color: white;
-}
-
-.stage-instance dt {
-  color: #c7caa8;
-  text-transform: uppercase;
-}
-
-.stage-instance .jobs {
-  display: block;
-  clear: left;
-  float: left;
-  width: 15em;
-}
-
-.stage-instance .jobs li {
-  background-color: #e9ece9;
-  border-bottom: 1px solid #b4ab9c !important;
-}
-
-.stage-instance .jobs li.Passed {
-  background-color: #ceedce;
-}
-
-.stage-instance .jobs li.Failed {
-  background-color: #ffe5e6;
-}
-
-.stage-instance .jobs li.Building {
-  background-color: #ffffe1;
-}
-
-.stage-instance .jobs li.current {
-  background-color: #343226;
-}
-
-.stage-instance .jobs a:link {
-  padding: 0.5em 1em;
-  display: block;
-  color: black;
-  text-decoration: none;
-}
-
-/* clearafter fix */
-.pipeline-instance::after {
-  content: ".";
-  display: block;
-  height: 0;
-  clear: both;
-  visibility: hidden;
-}
-
 /* changes */
 
 .changes h3 {
@@ -231,161 +39,6 @@
 
 .changes .comment {
   font-weight: bold;
-}
-
-.changes .modified-file {
-  margin-left: 2em;
-}
-
-/* pipeline-visualization */
-
-.pipeline-visualization .approval .manual {
-  background-image: image_url("manual-approval-icon.png");
-}
-
-.pipeline-visualization .approval .manual.disabled_btn {
-  background-position: 0 -22px;
-}
-
-.pipeline-visualization .approval .auto.disabled_btn {
-  background-position: 0 -22px;
-}
-
-.pipeline-visualization .approval .auto {
-  background-image: image_url("auto-approval-icon.png");
-}
-
-.pipeline-visualization .approval input {
-  background-color: transparent;
-  background-repeat: no-repeat;
-  height: 22px;
-  width: 48px;
-  border: medium none;
-  display: block;
-  left: -35px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  text-indent: -10000px;
-  zoom: 1;
-  top: 2em;
-  cursor: pointer;
-  z-index: 1;
-}
-
-.pipeline-visualization .cancel input[type="submit"]:hover {
-  background-position: 0 -30px;
-}
-
-.pipeline-visualization .cancel input[type="submit"] {
-  background-color: transparent;
-  background-image: image_url("cancel-icon.png");
-  border: none;
-  display: block;
-  height: 30px;
-  margin-top: -2px;
-  overflow: hidden;
-  padding: 0;
-  text-indent: -10000px;
-  zoom: 1;
-  width: 30px;
-  cursor: pointer;
-  position: absolute;
-  right: 10px;
-  top: -5px;
-  z-index: 1;
-}
-
-.pipeline-visualization .rerun input[type="submit"]:hover {
-  background-position: 0 -30px;
-}
-
-.pipeline-visualization .rerun input[type="submit"] {
-  background-color: transparent;
-  background-image: image_url("rerun-icon.png");
-  background-repeat: no-repeat;
-  border: medium none;
-  display: block;
-  height: 30px;
-  margin-top: -2px;
-  overflow: hidden;
-  padding: 0;
-  text-indent: -10000px;
-  zoom: 1;
-  width: 30px;
-  cursor: pointer;
-  position: absolute;
-  right: 10px;
-  top: -5px;
-  z-index: 1;
-}
-
-.pipeline-visualization {
-  border-collapse: collapse;
-  width: 100%;
-}
-
-.pipeline-visualization th,
-.pipeline-visualization td {
-  background-color: #e7e1d1;
-  padding: 0;
-  padding-left: 1em;
-  padding-right: 1em;
-}
-
-.pipeline-visualization .selected {
-  background-color: gray;
-}
-
-.pipeline-visualization th {
-  color: #484537;
-  font-weight: bold;
-  text-align: center;
-  vertical-align: middle;
-  font-size: 1.2em;
-  width: 7em;
-  padding: 0.25em;
-}
-
-.pipeline-visualization .stage-wrapper {
-  min-width: 150px;
-  position: relative;
-  width: auto;
-}
-
-.pipeline-visualization .stage {
-  display: block;
-  text-indent: -10000px;
-  zoom: 1;
-  overflow: hidden;
-  margin: 1em auto;
-  width: 105px;
-  height: 70px;
-  border: 2px solid white;
-  background-color: #666;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-  -moz-box-shadow: 5px 5px 5px black;
-  -webkit-box-shadow: 5px 5px 5px black;
-  box-shadow: 5px 5px 5px black;
-}
-
-.pipeline-visualization .Passed {
-  background-image: image_url("stage_passed.png");
-  background-position: center center;
-}
-
-.pipeline-visualization .Building {
-  background-image: image_url("stage_running.png");
-  background-position: center center;
-}
-
-.pipeline-visualization .Failing,
-.pipeline-visualization .Failed,
-.pipeline-visualization .Cancelled {
-  background-image: image_url("stage_failed.png");
-  background-position: center center;
 }
 
 /* State color rule for Jobs */
@@ -420,85 +73,6 @@ div:hover.pipeline {
   cursor: pointer;
 }
 
-.pipeline-history > div:nth-child(odd) {
-  background-color: #e7e1d1;
-}
-
-.pipeline-history .header {
-  background-color: #484537 !important;
-}
-
-.pipeline-history .header [type="submit"] {
-  float: left;
-  cursor: pointer;
-}
-
-.pipeline-history .pause input[type="submit"] {
-  display: block;
-  background-image: image_url("pause-icon.png");
-  background-position: left top;
-  background-color: transparent;
-  width: 33px;
-  height: 33px;
-  border: none;
-  overflow: hidden;
-  text-indent: -10000px;
-  zoom: 1;
-}
-
-.pipeline-history .pause input[type="submit"]:hover {
-  background-position: left -33px;
-}
-
-.pipeline-history .unpause input[type="submit"] {
-  display: block;
-  background-image: image_url("pause-icon.png");
-  background-position: left 66px;
-  background-color: transparent;
-  width: 33px;
-  height: 33px;
-  border: none;
-  overflow: hidden;
-  text-indent: -10000px;
-  zoom: 1;
-}
-
-.pipeline-history .unpause input[type="submit"]:hover {
-  background-position: left bottom;
-}
-
-.pipeline-history .force input[type="submit"] {
-  display: block;
-  background-image: image_url("start-icon.png");
-  background-position: left top;
-  background-color: transparent;
-  width: 33px;
-  height: 33px;
-  border: none;
-  overflow: hidden;
-  text-indent: -10000px;
-  zoom: 1;
-}
-
-.pipeline-history .force input[type="submit"]:hover {
-  background-position: left -33px;
-}
-
-.pipeline-history .force input[type="submit"].disabled {
-  background-position: left bottom;
-  cursor: default;
-}
-
-.pipeline-history .pipeline-operations {
-  margin-top: 0.15em;
-  margin-right: 0.5em;
-  float: right;
-}
-
-.pipeline-history .pipeline-operations form {
-  display: inline;
-}
-
 .pipeline .details {
   margin: 0;
   padding-top: 0;
@@ -514,8 +88,7 @@ div:hover.pipeline {
   font-weight: bold;
 }
 
-.pipeline .details .label a:link,
-.pipeline-history h1 a:link {
+.pipeline .details .label a:link {
   color: #494638;
 }
 
@@ -535,8 +108,6 @@ div:hover.pipeline {
 
 .stages {
   width: 20em;
-
-  /* float: left; */
   clear: both;
   margin-bottom: 2em;
   margin-top: 0.2em;
@@ -610,109 +181,6 @@ div:hover.pipeline {
   display: none;
 }
 
-/* pipeline group */
-.pipeline-groups {
-  margin-left: 1em;
-  padding-top: 1em;
-}
-
-.pipeline-group {
-  background-color: #e7e1d1;
-  margin-right: 1em;
-  margin-bottom: 1em;
-  border: 1px solid #484537;
-  clear: left;
-}
-
-.pipeline-group h1.name {
-  font-size: 1.2em;
-  text-transform: uppercase;
-  overflow: hidden;
-  color: #c7caa8;
-  background-color: #484537;
-  padding: 0.25em 0.5em;
-}
-
-.pipeline-history .group {
-  display: none;
-}
-
-/* job instance */
-.job-instance {
-  background-color: #b4ab9c;
-  clear: left;
-  border-top: 1px solid gray;
-  border-bottom: 1px solid gray;
-}
-
-.job-instance h3 {
-  color: #534f44;
-  float: left;
-}
-
-.job-tabs,
-.job-tab {
-  float: left;
-}
-
-.job-tabs {
-  background-image: image_url("bg_job_tabs.png");
-  background-position: left 50%;
-  background-repeat: repeat-x;
-  border: 1px solid white;
-  margin-top: 0.25em;
-  margin-bottom: 0.25em;
-  margin-left: 5em;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-}
-
-.job-tabs a:link {
-  color: white;
-  font-weight: bold;
-  font-size: 0.85em;
-  text-transform: uppercase;
-  text-decoration: none;
-}
-
-.job-tabs li.current {
-  background-image: image_url("bg_job_tab_current.png");
-  background-position: left top;
-  background-repeat: repeat-x;
-  background-color: #c2bbb1;
-}
-
-.job-tabs .current a:link {
-  color: #292824;
-}
-
-.job-tab {
-  padding: 0.5em 1em;
-}
-
-#job-content {
-  margin-left: 15em;
-  border-left: 1px solid grey;
-}
-
-/*
-*  Accordions
-*/
-
-.accordion_toggle {
-  display: block;
-  cursor: pointer;
-}
-
-.accordion_toggle_active {
-}
-
-.accordion_content {
-  padding: 0.2em 1em;
-  overflow: hidden;
-}
-
 li.pipeline h3 {
   margin-bottom: 0.3em;
 }
@@ -723,11 +191,6 @@ ul li.material {
 
 .environment h1.name a {
   color: #c7caa8;
-}
-
-.show_revisions {
-  white-space: nowrap;
-  font-size: 0.9em;
 }
 
 .material dt {
