--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/vm/_structure_for_old_ui.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/vm/_structure_for_old_ui.scss
@@ -119,7 +119,7 @@ h3 strong {
 pre,
 code,
 #admin-holder-for-admin-config-source-xml textarea {
-  font-family: consolas, monaco, courier;
+  font-family: consolas, monaco, menlo, courier;
   font-size: 13px;
 }
 
