--- a/server/src/main/webapp/WEB-INF/rails/app/views/admin/configuration/show.html.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/views/admin/configuration/show.html.erb
@@ -36,7 +36,7 @@
               <style>
                 #content_container textarea {
                   cursor: text;
-                  font-family: consolas, monaco, courier, monospace;
+                  font-family: consolas, monaco, menlo, courier, monospace;
                   color: #333;
                   line-height: 20px;
                   font-size: 13px;
