--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css_sass/global/_typography.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css_sass/global/_typography.scss
@@ -16,7 +16,7 @@
 pre,
 code,
 .code {
-  font-family: consolas, monaco, courier;
+  font-family: consolas, monaco, menlo, courier;
   color: #333;
   line-height: 20px;
   font-size: 13px;
