Fix availability of Open Sans font for legacy views
Currently Open Sans isn't rendering properly on some views causing inconsistency, especially in headers bars.

--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/application.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/application.scss
@@ -28,7 +28,7 @@
  *
  */
 
-@import "font-awesome-sprockets";
+@import "fonts";
 @import "shared/go-variables";
 @import "shared/mixins";
 @import "shared/common";
