Make font smoothing consistent on Firefox/MacOS
Foundation Sites and other places seem to be applying font smoothing. Currently there is irritating inconsistency across views. Where
Foundation for Sites is loading font both font smoothing vars are loaded, but there are other places it's not being used. Setting these
manually seems to at least make things consistent on Firefox MacOS.

If we ever get rid of Foundation for Sites this will need to be tidied up further :-(

--- a/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/_font-awesome-glyphs.scss.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/_font-awesome-glyphs.scss.erb
@@ -86,6 +86,7 @@ $fa-font-icons: (
     text-shadow: $shadow;
   }
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 @mixin in-progress-spinner($type: spinner) {
