--- a/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/shared/_analytics-common.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/shared/_analytics-common.scss
@@ -29,10 +29,7 @@
     text-align: center;
     background: #fff;
     position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    inset: 0;
     z-index: 20;
 
     .loading-message {
