--- a/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/_font-awesome-glyphs.scss.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/_font-awesome-glyphs.scss.erb
@@ -47,12 +47,12 @@ $fa-font-icons: (
   }
 }
 
-@mixin icon-only($type, $font: "font-awesome") {
-  @if $font == "font-awesome" {
-    font-family: "Font Awesome 6 Free", sans-serif;
+@mixin icon-only($type, $font: "FontAwesome") {
+  @if $font == "FontAwesome" {
+    font-family: $font, sans-serif;
     font-weight: 900;
-  } @else if $font == "font-awesome-brands" {
-    font-family: "Font Awesome 6 Brands", sans-serif;
+  } @else if $font == "FontAwesomeBrands" {
+    font-family: $font, sans-serif;
     font-weight: 400;
   } @else {
     @error "Could not find font family #{$font}";
@@ -61,7 +61,7 @@ $fa-font-icons: (
   @include icon-glyph("fa-var-#{$type}");
 }
 
-@mixin icon($type, $size: auto, $margin: auto, $line-height: 1em, $color: auto, $top: auto, $shadow: none, $font: "font-awesome") {
+@mixin icon($type, $size: auto, $margin: auto, $line-height: 1em, $color: auto, $top: auto, $shadow: none, $font: "FontAwesome") {
   @include icon-only($type: $type, $font: $font);
 
   font-style: normal;
@@ -94,7 +94,7 @@ $fa-font-icons: (
   @include animation(spin 1s linear infinite);
 }
 
-@mixin icon-before($type, $size: auto, $margin: 5px, $line-height: 1em, $color: auto, $top: auto, $shadow: none, $font: "font-awesome", $progress-spinner: false) {
+@mixin icon-before($type, $size: auto, $margin: 5px, $line-height: 1em, $color: auto, $top: auto, $shadow: none, $font: "FontAwesome", $progress-spinner: false) {
   &:before {
     @include icon($type, $size, $margin, $line-height, $color, $top, $shadow, $font: $font);
     @content;
@@ -107,7 +107,7 @@ $fa-font-icons: (
   }
 }
 
-@mixin icon-after($type, $size: auto, $margin: 5px, $line-height: 1em, $color: auto, $top: auto, $shadow: none, $font: "font-awesome", $progress-spinner: false) {
+@mixin icon-after($type, $size: auto, $margin: 5px, $line-height: 1em, $color: auto, $top: auto, $shadow: none, $font: "FontAwesome", $progress-spinner: false) {
   &:after {
     @include icon($type, $size, $margin, $line-height, $color, $top, $shadow, $font: $font);
     @content;
