--- a/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/_font-awesome-sprockets.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/_font-awesome-sprockets.scss
@@ -20,20 +20,18 @@
 @import "@fortawesome/fontawesome-free/scss/fontawesome";
 
 $fa-font-path: "@fortawesome/fontawesome-free/webfonts";
-$fa-style-family-brands: "#{str-slice($fa-style-family, 1, -5)} Brands";
 
 @include font-face(
-  $font-family: $fa-style-family,
+  $font-family: FontAwesome,
   $file-path: "#{$fa-font-path}/fa-solid-900",
   $file-formats: ("woff2"),
-  $asset-pipeline: true
 ) {
   font-style: normal;
   font-weight: 900;
 }
 
 @include font-face(
-  $font-family: $fa-style-family-brands,
+  $font-family: FontAwesomeBrands,
   $file-path: "#{$fa-font-path}/fa-brands-400",
   $file-formats: ("woff2"),
   $asset-pipeline: true
