--- a/server/src/main/webapp/WEB-INF/rails/webpack/single_page_apps/global.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/single_page_apps/global.scss
@@ -97,10 +97,9 @@ p {
 }
 
 $fa-font-path: "@fortawesome/fontawesome-free/webfonts";
-$fa-style-family-brands: "#{str-slice($fa-style-family, 1, -5)} Brands";
 
 @include font-face(
-  $font-family: $fa-style-family,
+  $font-family: FontAwesome,
   $file-path: "#{$fa-font-path}/fa-solid-900",
   $file-formats: ("woff2"),
 ) {
@@ -109,7 +108,7 @@ $fa-style-family-brands: "#{str-slice($fa-style-family, 1, -5)} Brands";
 }
 
 @include font-face(
-  $font-family: $fa-style-family-brands,
+  $font-family: FontAwesomeBrands,
   $file-path: "#{$fa-font-path}/fa-brands-400",
   $file-formats: ("woff2"),
 ) {
