--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/global/_fontawesome.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/global/_fontawesome.scss
@@ -16,12 +16,12 @@
 @import "@fortawesome/fontawesome-free/scss/functions";
 @import "@fortawesome/fontawesome-free/scss/variables";
 
-@mixin icon-only($type, $font: "font-awesome") {
-  @if $font == "font-awesome" {
-    font-family: $fa-style-family, sans-serif;
+@mixin icon-only($type, $font: "FontAwesome") {
+  @if $font == "FontAwesome" {
+    font-family: $font, sans-serif;
     font-weight: 900;
-  } @else if $font == "font-awesome-brands" {
-    font-family: "#{str-slice($fa-style-family, 1, -5)} Brands", sans-serif;
+  } @else if $font == "FontAwesomeBrands" {
+    font-family: $font, sans-serif;
     font-weight: 400;
   } @else {
     @error "Could not find font family #{$font}";
@@ -38,7 +38,7 @@
   $color: auto,
   $top: auto,
   $shadow: none,
-  $font: "font-awesome") {
+  $font: "FontAwesome") {
   @include icon-only($type: $type, $font: $font);
 
   font-style: normal;
@@ -79,7 +79,7 @@
   $color: auto,
   $top: auto,
   $shadow: none,
-  $font: "font-awesome",
+  $font: "FontAwesome",
   $progress-spinner: false) {
   &::before {
     @include icon($type, $size, $margin, $line-height, $color, $top, $shadow, $font: $font);
@@ -95,7 +95,7 @@
   $color: auto,
   $top: auto,
   $shadow: none,
-  $font: "font-awesome",
+  $font: "FontAwesome",
   $progress-spinner: false) {
   &::after {
     @include icon($type, $size, $margin, $line-height, $color, $top, $shadow, $font: $font);
