Fix display of build detail timestamps icon
No idea what happened here :-(

--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css/_build_detail.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css/_build_detail.scss
@@ -718,3 +718,7 @@ a.collapse-all {
 .compress {
   display: none;
 }
+
+.timestamps {
+  @include icon-before("clock", $line-height: 1.22em, $margin: 0 5px);
+}
